namespaces/live-1.cloud-platform.service.justice.gov.uk/licences-prod/99-redirect_old_url_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/custom-http-errors: "418"
    nginx.ingress.kubernetes.io/rewrite-target: https://licences.prison.service.justice.gov.uk/$1
  labels:
    app: licences
  name: licences-redirect-old-url
  namespace: licences-prod
spec:
  rules:
  - host: licences.service.hmpps.dsd.io
    http:
      paths:
      - backend:
          serviceName: licences
          servicePort: http
        path: /(.*)
  tls:
  - hosts:
    - licences.service.hmpps.dsd.io
    secretName: licences-cert-dsd
